--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,13 +7,13 @@
 
     <title>Enspiraled</title>
 
-    <link rel="icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/css/app.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     
     <div id="app"></div>
 
-    <script src="/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
