--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    
+    <div><p>Click on the cirle</p></div>
     <div id="app"></div>
 
     <script src="bundle.js"></script>
